# DocCloak.FineTuner

./: .env.example  .gitignore  CLAUDE.md  README.md  config.herbert.yaml  config.scribe.yaml  pyproject.toml  setup_gpu.sh
doccloak_finetuner/: __init__.py  cli.py  config.py  exporter.py  exporter_causal.py  orchestrator.py  tools.py
doccloak_finetuner/scaffold/: generator.py
doccloak_finetuner/scaffold/templates/: guard.py.j2  text_generation_prepare.py.j2  text_generation_train.py.j2  token_classification_prepare.py.j2  token_classification_train.py.j2
tests/: test_cli.py  test_config.py
