[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doccloak-finetuner"
version = "0.1.0"
description = "API-driven autonomous fine-tuning for DocCloak PII detection models."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "DocCloak Team" },
]
keywords = ["fine-tuning", "ner", "pii", "claude-api", "doccloak"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1,<9",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "anthropic>=0.80.0",
    "python-dotenv>=1.0,<2",
    "torch>=2.6,<3",
    "torchvision>=0.21,<1",
    "torchaudio>=2.6,<3",
    "transformers>=4.46,<5",
    "datasets>=2.0,<4",
    "seqeval>=1.2,<2",
    "accelerate>=0.20,<2",
    "numpy<3",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.15,<2",
    "onnxruntime>=1.18,<2",
    "optimum[onnxruntime]>=1.20,<2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[project.scripts]
doccloak-finetune = "doccloak_finetuner.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
